--- a/app/app.html
+++ b/app/app.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Foil</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.12/semantic.min.css"></link>
     <script>
       (function() {
         if (!process.env.HOT) {
